
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
unsigned short checksum(unsigned short *buf,int nwords)
{
 unsigned long sum;
 for (sum = 0; nwords > 0; nwords--)
  sum += *(buf)++;
 sum = (sum >> 16) + (sum & 0xffff);
 sum += (sum >> 16);
 return ~sum;
}
